[project]
name = "request-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dzmitry Sianiuk", email = "dsianyuk@octobrowser.net" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "uvicorn>=0.35.0",
]

[project.scripts]
request-explorer = "request_explorer:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
